# power-strip-core

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
src/: functions.cpp  functions.h  main.cpp
src/configs/: pins.h
src/configs/global/: CountersContainer.cpp  CountersContainer.h  DbConn.cpp  DbConn.h  PinsValue.cpp  PinsValue.h  TimetableContainer.cpp  TimetableContainer.h
src/http/: functions.cpp  functions.h
src/http/countdown/: http.cpp  http.h
src/http/repeats/: http.cpp  http.h
src/http/timetable/: http.cpp  http.h
src/modes/counters/: countersContainer.cpp  countersContainer.h
src/modes/counters/countdown/: countdown.cpp  countdown.h
src/modes/counters/repeats/: repeats.cpp  repeats.h
src/modes/timetable/: timetable.cpp  timetable.h
src/modes/timetable/container/: timetableContainer.cpp  timetableContainer.h
src/sqlite/: sqlite.cpp  sqlite.h
